welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:14: error: value compteur is not a member of Unit
possible cause: maybe a semicolon is missing before `value compteur'?
	} compteur=0
          ^